# duckdb

tools/shell/: CMakeLists.txt
